tests/baselines/reference/jsdocTypeFromChainedAssignment2.errors.txt
use.js(2,7): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
use.js(3,7): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
use.js(4,7): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
use.js(5,7): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== use.js (4 errors) ====
    var mod = require('./mod');
    mod.f('no')
          ~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    mod.g('also no')
          ~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    mod.h(0)
          ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    mod.i(1)
          ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    
==== mod.js (0 errors) ====
    /** @param {number} n */
    exports.f = exports.g = function fg(n) {
        return n + 1
    }
    /** @param {string} mom */
    module.exports.h = module.exports.i = function hi(mom) {
        return `hi, ${mom}!`;
    }
    